--- a/src/components/Hero/Hero.module.scss
+++ b/src/components/Hero/Hero.module.scss
@@ -33,6 +33,10 @@
 .textBlock {
   width: 100%;
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 14rem;
 
   @media (min-width: 1024px) {
     width: 50%;
