--- a/src/components/Hero/Hero.module.scss
+++ b/src/components/Hero/Hero.module.scss
@@ -36,11 +36,11 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding-top: 14rem;
 
-  @media (min-width: 1024px) {
+  @media (min-width: $breakpoint-lg) {
     width: 50%;
     text-align: left;
+    padding: 0;
   }
 }
 
@@ -78,12 +78,10 @@
 
 .imageBlock {
   position: relative;
-  width: 100%;
-  height: 420px;
-  display: flex;
-  justify-content: center;
+  width: auto;
+  height: 520px;
 
-  @media (min-width: 1024px) {
+  @media (min-width: $breakpoint-lg) {
     width: 50%;
   }
 }
