--- a/src/components/Hero/Hero.module.scss
+++ b/src/components/Hero/Hero.module.scss
@@ -1,32 +1,19 @@
 @use '@/styles/variables' as *;
 
 .heroSection {
-  position: relative;
-  min-height: 100vh;
   display: flex;
-  color: $color-text-light;
-  background-image: url('@/img/hero/hero-bg.svg');
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: top;
-  background-attachment: fixed;
-  z-index: 0;
-}
-
-.container {
-  display: flex;
-  position: relative;
   align-items: center;
   flex-direction: column;
   justify-content: center;
-  gap: 4rem;
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 0 1rem;
-  z-index: $z-index-overlay;
+  height: 100vh;
+  padding: 6rem 2rem;
+  color: $color-text-light;
+  background: url('@/img/hero/hero-bg.svg') no-repeat top / cover fixed;
+  z-index: 0;
 
-  @media (min-width: 1024px) {
+  @media (min-width: $breakpoint-lg) {
     flex-direction: row;
+    height: auto;
   }
 }
 
@@ -76,38 +63,10 @@
   }
 }
 
-.imageBlock {
-  position: relative;
-  width: auto;
-  height: 520px;
-
+.heroImg {
+  height: 20rem;
+  margin: 2rem;
   @media (min-width: $breakpoint-lg) {
-    width: 50%;
+    height: 34rem;
   }
-}
-
-.card {
-  position: absolute;
-  bottom: -10rem;
-}
-
-.card1 {
-  left: 50%;
-  transform: translateX(-50%);
-  width: 240px;
-  z-index: 30;
-}
-
-.card2 {
-  left: 33%;
-  transform: translateX(-33%);
-  width: 340px;
-  z-index: 20;
-}
-
-.card3 {
-  left: 33%;
-  transform: translateX(-50%);
-  width: 440px;
-  z-index: 10;
 }
