--- a/src/components/TestimonialSection/TestimonialSection.module.scss
+++ b/src/components/TestimonialSection/TestimonialSection.module.scss
@@ -38,7 +38,7 @@
 
 .card {
   background-color: $color-text-light;
-  border-radius: $radius-sm;
+  border-radius: $radius-md;
   padding: 2rem;
   box-shadow: $shadow-md;
   text-align: center;
@@ -52,7 +52,7 @@
 .avatar {
   width: 64px;
   height: 64px;
-  border-radius: 9999px;
+  border-radius: 50%;
   object-fit: cover;
   margin: 0 auto 1rem;
 }
