--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,6 +1,9 @@
 // Colors
 $color-primary: #487cff;
 $color-heading: #000000;
+$color-h1: #fff;
+$color-h2: #000;
+$color-h3: #4b4b4b;
 $color-body: #60698d;
 $color-text-light: #ffffff;
 $color-gray-light: #f9fafb;
