--- a/src/components/Hero/Hero.module.scss
+++ b/src/components/Hero/Hero.module.scss
@@ -1,18 +1,24 @@
 @use '@/styles/variables' as *;
 
+.heroWrapper {
+  background: url('@/img/hero/hero-bg.svg') no-repeat top / cover fixed;
+}
+
 .heroSection {
   display: flex;
   align-items: center;
   flex-direction: column;
   justify-content: center;
   height: 100vh;
-  padding: 6rem 2rem;
+  padding: 6rem 0rem;
   color: $color-text-light;
-  background: url('@/img/hero/hero-bg.svg') no-repeat top / cover fixed;
+
   z-index: 0;
 
   @media (min-width: $breakpoint-lg) {
     flex-direction: row;
+    justify-content: space-between;
+    background-size: contain;
     height: auto;
   }
 }
@@ -28,17 +34,6 @@
     width: 50%;
     text-align: left;
     padding: 0;
-  }
-}
-
-.title {
-  font-size: $font-size-2xl;
-  font-weight: $font-weight-bold;
-  line-height: 1.2;
-  margin-bottom: 1.5rem;
-
-  @media (min-width: 768px) {
-    font-size: $font-size-3xl;
   }
 }
 
