add section update styles

--- a/src/components/ClientLogoSection/ClientLogoSection.module.scss
+++ b/src/components/ClientLogoSection/ClientLogoSection.module.scss
@@ -1,8 +1,7 @@
 @use '@/styles/variables' as *;
 
-.section {
+.clientLogoSection {
   padding: 3rem 0;
-  background-color: $color-text-light;
   overflow: hidden;
 }
 
