--- a/src/components/AboutSection/AboutSection.module.scss
+++ b/src/components/AboutSection/AboutSection.module.scss
@@ -1,9 +1,9 @@
-// src/components/AboutSection.module.scss
 @use '@/styles/variables' as *;
 
 .aboutWrapper {
-  background-color: $color-gray-light;
+  background-color: $bg-section;
 }
+
 .aboutSection {
   display: flex;
   align-items: center;
@@ -32,8 +32,8 @@
 
   .description {
     font-size: $font-size-base;
-    color: $color-body;
-    margin-bottom: 1.5rem;
+    color: $text-color-default;
+    margin-bottom: $spacing-6;
     line-height: 1.6;
   }
 
@@ -43,16 +43,16 @@
 
     li {
       position: relative;
-      padding-left: 1.5rem;
-      margin-bottom: 0.75rem;
+      padding-left: $spacing-6;
+      margin-bottom: $spacing-3;
       font-size: $font-size-base;
-      color: $color-heading;
+      color: $text-color-heading;
 
       &::before {
         content: '✔';
         position: absolute;
         left: 0;
-        color: $color-primary;
+        color: $primary-color;
       }
     }
   }
