--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -9,7 +9,7 @@ $text-color-subheading: #1f2937;
 $text-color-contrast: #fff;
 $text-color-link: #1280c9;
 
-$color-h1: #000;
+$color-h1: #ffffff;
 $color-h2: #202020;
 $color-h3: #303030;
 $color-h4: #414141;
