--- a/src/components/AboutSection/AboutSection.module.scss
+++ b/src/components/AboutSection/AboutSection.module.scss
@@ -6,8 +6,12 @@
 
 .aboutSection {
   display: flex;
+  flex-direction: column;
   align-items: center;
   padding: $spacing-12 $spacing-4;
+  @media (min-width: $breakpoint-lg) {
+    flex-direction: row;
+  }
 }
 
 .imageBlock {
