--- a/src/components/Hero/Hero.module.scss
+++ b/src/components/Hero/Hero.module.scss
@@ -1,25 +1,31 @@
 @use '@/styles/variables' as *;
 
 .heroWrapper {
-  background: url('@/img/hero/hero-bg.svg') no-repeat top / cover fixed;
-  background-color: $bg-card;
+  position: relative;
+
+  overflow: hidden;
+  padding-bottom: $spacing-4;
+}
+
+.bgImage {
+  position: absolute;
+  inset: 0;
+  background: url('@/img/hero/hero-bg.svg') no-repeat top center / cover;
+  will-change: transform;
+  transition: transform 0.05s linear;
+  z-index: -1;
 }
 
 .heroSection {
   display: flex;
-  align-items: center;
   flex-direction: column;
+  align-items: center;
   justify-content: center;
-  height: 100vh;
-  padding: 6rem 0;
   color: $text-color-contrast;
-  z-index: 0;
 
   @media (min-width: $breakpoint-lg) {
     flex-direction: row;
     justify-content: space-between;
-    background-size: contain;
-    height: auto;
   }
 }
 
@@ -59,10 +65,12 @@
 }
 
 .heroImg {
-  height: 20rem;
-  margin: 2rem;
+  width: 100%;
+  max-width: 500px;
+  height: auto;
+  object-fit: contain;
 
   @media (min-width: $breakpoint-lg) {
-    height: 34rem;
+    max-width: 600px;
   }
 }
