--- a/src/components/Hero/Hero.module.scss
+++ b/src/components/Hero/Hero.module.scss
@@ -1,58 +1,47 @@
 @use '@/styles/variables' as *;
 
 .heroWrapper {
+  background-image: url(../../img/hero/hero-bg.svg);
+  background-repeat: no-repeat;
+  background-size: cover;
+
   position: relative;
-
-  overflow: hidden;
-  padding-bottom: $spacing-4;
-}
-
-.bgImage {
-  position: absolute;
-  inset: 0;
-  background: url('@/img/hero/hero-bg.svg') no-repeat top center / cover;
-  will-change: transform;
-  transition: transform 0.05s linear;
-  z-index: -1;
 }
 
 .heroSection {
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding: 10rem 0;
   justify-content: center;
   color: $text-color-contrast;
 
   @media (min-width: $breakpoint-lg) {
     flex-direction: row;
-    justify-content: space-between;
   }
 }
 
 .textBlock {
-  width: 100%;
+  max-width: 600px;
   text-align: center;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
 
   @media (min-width: $breakpoint-lg) {
-    width: 50%;
     text-align: left;
-    padding: 0;
   }
 }
 
 .description {
-  font-size: $font-size-base;
-  margin-bottom: 2rem;
+  font-size: $font-size-lg;
   color: $color-description;
+  margin-bottom: $spacing-6;
+  line-height: 1.7;
 }
 
 .ctaButton {
   display: inline-block;
-  padding: 0.75rem 1.5rem;
+  padding: 0.9rem 2rem;
   font-weight: $font-weight-semibold;
+  font-size: $font-size-base;
   background-color: $text-color-contrast;
   color: $primary-color;
   border-radius: $radius-lg;
@@ -64,13 +53,18 @@
   }
 }
 
-.heroImg {
+.imgBlock {
   width: 100%;
-  max-width: 500px;
-  height: auto;
-  object-fit: contain;
+  display: flex;
+  justify-content: center;
 
   @media (min-width: $breakpoint-lg) {
-    max-width: 600px;
+    justify-content: flex-end;
   }
+}
+
+.heroImg {
+  width: 100%;
+  max-width: 460px;
+  height: auto;
 }
