--- a/src/styles/_common.scss
+++ b/src/styles/_common.scss
@@ -17,6 +17,7 @@ a {
   color: $text-color-heading;
   text-decoration: none;
   transition: $transition-base;
+  cursor: pointer;
 
   &:hover {
     color: $primary-color;
