--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -40,6 +40,7 @@
       color: $text-color-contrast;
       text-decoration: none;
       transition: color 0.3s;
+      cursor: pointer;
 
       &:hover {
         color: $text-color-heading;
@@ -57,9 +58,9 @@
   height: 2rem;
   background: none;
   border: none;
-  cursor: pointer;
   z-index: $z-index-modal;
   padding: 0;
+  cursor: pointer; // тільки тут pointer
 
   span {
     height: 2px;
@@ -68,6 +69,7 @@
     border-radius: 2px;
     transition: all 0.3s ease;
     transform-origin: center;
+    cursor: auto; // прибрали pointer
   }
 
   &.open {
@@ -109,6 +111,7 @@
     font-weight: $font-weight-semibold;
     text-decoration: none;
     transition: color 0.3s;
+    cursor: pointer;
 
     &:hover {
       color: $primary-color;
@@ -124,4 +127,11 @@
   @media (min-width: $breakpoint-lg) {
     display: none;
   }
+}
+
+.overlay {
+  position: fixed;
+  inset: 0;
+  background: rgba(0, 0, 0, 0.4);
+  cursor: default;
 }
